Self testing complete with ASTTestCase